Rewrap command for "> " causes Thunderbird to crash
Categories
(Core :: DOM: Editor, defect)
Tracking
()
People
(Reporter: emoore, Assigned: mkmelin)
References
Details
(Keywords: crash, reproducible)
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-esr102+
|
Details | Review |
I'm using Thunderbird 102.0.2 and Windows 11Pro .
Compose a HTML message and type '>' (without the quotes), a space, select the two characters and then either press Control+R or use Edit->Rewrap to rewrap the message
Actual effect: Thunderbird crashes to the desktop.
Expected effect: Selected message text is rewrapped.
This problem occurs with 102.0.2 , 91.11.0. and 104.0a1 (2022-07-11) (64-bit) on my PC. I tested this after somebody in the MozillaZine forums ran into this problem with version 91 and wanted to know if it also occurred with 102.
Crash reports:
bp-cb01a811-17f4-4160-9d4c-4cb220220713
bp-df31c643-b304-41fc-a3e4-07f5d0220712
bp-4389bddd-affb-46bf-94f5-de25f0220712
bp-dd7d2d20-1bf8-493f-8c0e-819830220712
After restarting Thunderbird 102.0.2 I looked at the error tab in the error console. It had:
Uncaught TypeError: gFolderDisplay is null
get currentViewValue chrome://messenger/content/msgViewPickerOverlay.js:98
RefreshViewPopup chrome://messenger/content/msgViewPickerOverlay.js:171
RefreshAllViewPopups chrome://messenger/content/msgViewPickerOverlay.js:154
ViewPickerOnLoad chrome://messenger/content/msgViewPickerOverlay.js:293
Bug 1778836 also had gFolderDisplay is null .
Comment 1•4 years ago
|
||
Thanks for the steps - immediately reproducible. My crash bp-c549a101-05a2-4994-821d-554e10220713
Comment 2•4 years ago
|
||
bp-cb01a811-17f4-4160-9d4c-4cb220220713
0 xul.dll mozilla::detail::nsTStringRepr<char16_t>::First() const xpcom/string/nsTSubstring.cpp:956 context
1 xul.dll mozilla::HTMLEditor::InsertTextWithQuotationsInternal(nsTSubstring<char16_t> const&) editor/libeditor/HTMLEditorDataTransfer.cpp:2852 cfi
2 xul.dll mozilla::HTMLEditor::Rewrap(bool) editor/libeditor/HTMLEditorDataTransfer.cpp:3210 cfi
3 xul.dll XPTC__InvokebyIndex cfi
4 xul.dll static XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) js/xpconnect/src/XPCWrappedNative.cpp:1125 cfi
5 xul.dll XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*) js/xpconnect
| Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
Comment 5•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•4 years ago
|
||
Comment on attachment 9285236 [details]
Bug 1779343 - Don't crash rewrapping "> ". r=masayuki
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Crash fix
- User impact if declined: Crashes reproducibly
- Fix Landed on Version: 104
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Contained crash fix.
Updated•4 years ago
|
Comment 7•4 years ago
|
||
Comment on attachment 9285236 [details]
Bug 1779343 - Don't crash rewrapping "> ". r=masayuki
Approved for 102.2esr.
Comment 8•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Description
•