Bug 1779343 - Don't crash rewrapping "> ". r=masayuki, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D151682